[tool.poetry]
name = "intercom"
version = "0.1.0"
description = ""
authors = ["Toshifumi Tsutsumi <rev.to12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyAudio = "^0.2.11"
Wave = "^0.0.2"
numpy = "^1.20.3"
awsiotsdk = "^1.5.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
